--- a/BOTTGIngSoft2021.Bot/wwwroot/default.htm
+++ b/BOTTGIngSoft2021.Bot/wwwroot/default.htm
@@ -398,17 +398,26 @@
     <div class="row">
         <div class="column" class="main-content-area">
             <div class="content-title">Your bot is ready!</div>
-            <div class="main-text main-text-p1">You can test your bot in the Bot Framework Emulator<br />
-                by connecting to http://localhost:3978/api/messages.</div>
-            <div class="main-text download-the-emulator"><a class="ctaLink"
-                    href="https://aka.ms/bot-framework-F5-download-emulator" target="_blank">Download the Emulator</a>
+            <div class="main-text main-text-p1">
+                You can test your bot in the Bot Framework Emulator<br />
+                by connecting to http://localhost:3978/api/messages.
             </div>
-            <div class="main-text">Visit <a class="ctaLink" href="https://aka.ms/bot-framework-F5-abs-home"
-                    target="_blank">Azure
-                    Bot Service</a> to register your bot and add it to<br />
+            <div class="main-text download-the-emulator">
+                <a class="ctaLink"
+                   href="https://aka.ms/bot-framework-F5-download-emulator" target="_blank">Download the Emulator</a>
+            </div>
+            <div class="main-text">
+                Visit <a class="ctaLink" href="https://aka.ms/bot-framework-F5-abs-home"
+                         target="_blank">
+                    Azure
+                    Bot Service
+                </a> to register your bot and add it to<br />
                 various channels. The bot's endpoint URL typically looks
-                like this:</div>
+                like this:
+            </div>
             <div class="endpoint">https://<i>your_bots_hostname</i>/api/messages</div>
+
+            <iframe src='https://webchat.botframework.com/embed/BOTTGIngSoft2021?s=_w2Z0zEwaT4.g6g9vEvyJYLPl7R-ZSZu2apCdF_13WXX9RmWCrNoffA' style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
         </div>
         <div class="column how-to-iframe" id="how-to-iframe"></div>
     </div>
